<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtWeek" />

            <TextView
                android:id="@+id/txtMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtMonth" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtDate" />

            <TextView
                android:id="@+id/txtDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtDay" />

            <TextView
                android:id="@+id/txtEmp0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp0" />

            <TextView
                android:id="@+id/txtEmp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp1" />

            <TextView
                android:id="@+id/txtEmp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp2" />

            <TextView
                android:id="@+id/txtEmp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp3" />

            <TextView
                android:id="@+id/txtEmp4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp4" />

            <TextView
                android:id="@+id/txtEmp5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp5" />

            <TextView
                android:id="@+id/txtEmp6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp6" />

            <TextView
                android:id="@+id/txtEmp7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp7" />

            <TextView
                android:id="@+id/txtEmp8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp8" />

            <TextView
                android:id="@+id/txtEmp9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp9" />

            <TextView
                android:id="@+id/txtEmp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txtEmp10" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dayRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>