<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_margin="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/loginNameHint" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginPasswordHint"
        android:layout_marginBottom="10dp"
        android:inputType="numberPassword"/>

    <CheckBox
        android:id="@+id/checkRemeber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkRememberTxt"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/loginBtnText"
        android:onClick="onClickBtnLogin"
        android:textAllCaps="false"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>